deployments/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msgapi
spec:
  selector:
    matchLabels:
      app: msgapi
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: msgapi
    spec:
      serviceAccountName: msgapi
      containers:
        - name: msgapi
          image: msgapi
          #          imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          command: [ "/app/msgapi", "--address", "0.0.0.0", "--config", "endpoints.yaml" ]
          readinessProbe:
            httpGet:
              port: 8888
              path: /health
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              port: 8888
              path: /health
            initialDelaySeconds: 5
          ports:
            - containerPort: 8888
              name: http-api
          resources:
            requests:
              cpu: "0.2"
              memory: 256Mi
            limits:
              cpu: "0.4"
              memory: 512Mi
          volumeMounts:
            - mountPath: /app/endpoints.yaml
              name: msgapi-endpoint-config
              subPath: endpoints.yaml
      volumes:
        - name: msgapi-endpoint-config
          configMap:
            name: msgapi-endpoint-config
