deployments/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msgapi-svc
  labels:
    app: msgapi
spec:
  type: NodePort
  ports:
    - targetPort: http-api
      port: 80
  selector:
    app: msgapi
